--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,18 @@
+body{
+    background: linear-gradient(180deg, rgba(34,193,195,1) 0%, rgba(13,71,71,1) 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+.todo{
+    background-color: whitesmoke;
+    border-radius: 0.8rem;
+    width: 80%;
+}
 
-/* 
+input{
+    width: 94%;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+}
 
-*/
+
